--- a/pride-inspector/branches/development/pom.xml
+++ b/pride-inspector/branches/development/pom.xml
@@ -189,6 +189,12 @@
             <artifactId>swingx</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.3.1</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
