--- a/pride-inspector/branches/development/pom.xml
+++ b/pride-inspector/branches/development/pom.xml
@@ -196,6 +196,24 @@
             <version>2.3.1</version>
             <type>pom</type>
         </dependency>
+        <!-- This is the lookandfeel for the pride inspector-->
+        <!--you can download the lookandfeel jar from http://www.jtattoo.net/Download.html-->
+        <!--Then install this library to maven using the following command: mvn install:install-file -Dfile=JTattoo.jar -DgroupId=jtattoo -DartifactId=jtattoo -Dversion=1.3 -Dpackaging=jar-->
+        <dependency>
+            <groupId>jtattoo</groupId>
+            <artifactId>jtattoo</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.insubstantial</groupId>-->
+            <!--<artifactId>substance</artifactId>-->
+            <!--<version>6.3</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.github.insubstantial</groupId>-->
+            <!--<artifactId>trident</artifactId>-->
+            <!--<version>6.3</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
