--- a/pride-inspector/trunk/pom.xml
+++ b/pride-inspector/trunk/pom.xml
@@ -170,7 +170,7 @@
         </dependency>
         <dependency>
             <!--Use the following command to add jnlp.jar file to your local maven repository-->
-            <!--mvn install:install-file -Dfile="path\to\jdk\sample\jnlp\servlet\jnlp.jar" -DgroupId=javax.jnlp -DartifactId=jnlp-api -Dversion=1.5.0 =Dpackaging=jar-->
+            <!--mvn install:install-file -Dfile="path\to\jdk\sample\jnlp\servlet\jnlp.jar" -DgroupId=javax.jnlp -DartifactId=jnlp-api -Dversion=1.5.0 -Dpackaging=jar-->
             <groupId>javax.jnlp</groupId>
             <artifactId>jnlp-api</artifactId>
             <version>1.5.0</version>
