--- a/pride-inspector/branches/development/pom.xml
+++ b/pride-inspector/branches/development/pom.xml
@@ -204,15 +204,20 @@
             <artifactId>jtattoo</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>protein-details-fetcher</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.github.insubstantial</groupId>-->
-            <!--<artifactId>substance</artifactId>-->
-            <!--<version>6.3</version>-->
+        <!--<groupId>com.github.insubstantial</groupId>-->
+        <!--<artifactId>substance</artifactId>-->
+        <!--<version>6.3</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>com.github.insubstantial</groupId>-->
-            <!--<artifactId>trident</artifactId>-->
-            <!--<version>6.3</version>-->
+        <!--<groupId>com.github.insubstantial</groupId>-->
+        <!--<artifactId>trident</artifactId>-->
+        <!--<version>6.3</version>-->
         <!--</dependency>-->
     </dependencies>
 
