--- a/pride-inspector/branches/development/pom.xml
+++ b/pride-inspector/branches/development/pom.xml
@@ -209,16 +209,11 @@
             <artifactId>protein-details-fetcher</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.github.insubstantial</groupId>-->
-        <!--<artifactId>substance</artifactId>-->
-        <!--<version>6.3</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>com.github.insubstantial</groupId>-->
-        <!--<artifactId>trident</artifactId>-->
-        <!--<version>6.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>accession-resolver</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
