--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -135,6 +135,12 @@
             <version>0.1.8</version>
         </dependency>
         <dependency>
+            <groupId>uk.ac.ebi.jmzidml</groupId>
+            <artifactId>jmzidentml</artifactId>
+            <version>1.1.2-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>uk.ac.ebi.pride.curation</groupId>
             <artifactId>pride-curation</artifactId>
             <version>0.0.1</version>
