--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -4,7 +4,7 @@
     <groupId>uk.ac.ebi.pride.gui</groupId>
     <artifactId>pride-inspector</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.0-beta</version>
+    <version>1.3.0-SNAPSHOT</version>
     <name>pride-inspector</name>
     <url>http://code.google.com/p/pride-toolsuite/wiki/PRIDEInspector</url>
 
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride.mzgraph</groupId>
             <artifactId>pride-mzgraph-browser</artifactId>
-            <version>1.0.9</version>
+            <version>1.0.11</version>
         </dependency>
         <dependency>
             <groupId>jdom</groupId>
@@ -143,13 +143,12 @@
         <dependency>
             <groupId>uk.ac.ebi.pride.util</groupId>
             <artifactId>pride-utilities</artifactId>
-            <version>0.1.8</version>
+            <version>0.1.11</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.jmzidml</groupId>
             <artifactId>jmzidentml</artifactId>
             <version>1.1.2-SNAPSHOT</version>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>psidev.psi.tools</groupId>
@@ -256,6 +255,15 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/db/*.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
@@ -277,7 +285,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <!-- comment exclusion section out if want to run batch test -->
+                    <!-- comment exclusion section out if want to run batch dbtest -->
                     <excludes>
                         <exclude>**/test</exclude>
                         <exclude>**/test/*.class</exclude>
@@ -285,8 +293,10 @@
                     <archive>
                         <manifest>
                             <mainClass>uk.ac.ebi.pride.gui.PrideInspectorBootstrap</mainClass>
-                            <!--use this if want to run batch test-->
-                            <!--<mainClass>uk.ac.ebi.pride.data.test.FileControllerBatchTest</mainClass>-->
+                            <!--use this if want to extract metadata from public mysql instance-->
+                            <!--<mainClass>uk.ac.ebi.pride.data.io.db.DBMetadataExtractor</mainClass>-->
+                            <!--use this if want to run batch dbtest-->
+                            <!--<mainClass>uk.ac.ebi.pride.dbtestst.FileControllerBatchTest</mainClass>-->
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib</classpathPrefix>
                         </manifest>
