--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ms-data-core-api</groupId>
+    <groupId>uk.ac.ebi.pride</groupId>
     <artifactId>ms-data-core-api</artifactId>
     <version>0.1</version>
 
