--- a/pride-inspector/branches/development/pom.xml
+++ b/pride-inspector/branches/development/pom.xml
@@ -313,6 +313,7 @@
 
         <profile>
             <!-- To run this profile, you will have to use Maven command line -->
+            <!--mvn -P env-public,webstart,pi-webstart-build clean package-->
             <id>pi-webstart-build</id>
             <activation>
                 <property>
@@ -323,7 +324,7 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.codehaus.mojo.webstart</groupId>
+                        <groupId>org.codehaus.mojo</groupId>
                         <artifactId>webstart-maven-plugin</artifactId>
                         <executions>
                             <execution>
