--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -45,17 +45,6 @@
             </roles>
             <timezone>0</timezone>
         </developer>
-
-        <developer>
-            <id>fabregat</id>
-            <name>Antonio Fabregat</name>
-            <organization>Proteomics Services Team, PANDA Group, EMBL-European Bioinformatics Institute</organization>
-            <organizationUrl>http://www.ebi.ac.uk/pride</organizationUrl>
-            <roles>
-                <role>developer</role>
-            </roles>
-            <timezone>0</timezone>
-        </developer>
     </developers>
 
     <dependencies>
@@ -81,6 +70,7 @@
             <artifactId>logback-classic</artifactId>
             <version>0.9.24</version>
         </dependency>
+
         <!-- mzML dependencies -->
         <dependency>
             <groupId>uk.ac.ebi.jmzml</groupId>
@@ -93,16 +83,63 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- mzIdentML File dependencies -->
         <dependency>
             <groupId>uk.ac.ebi.jmzidml</groupId>
             <artifactId>jmzidentml</artifactId>
             <version>1.1.2-SNAPSHOT</version>
         </dependency>
+        <!-- Begin of the jmzReader Dependencies. MzML and Pride XML files will be parse
+          with jaxb and jmzml directly in order to keep more matadata -->
         <dependency>
             <groupId>uk.ac.ebi.pride.tools</groupId>
             <artifactId>jmzreader</artifactId>
             <version>1.2.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
+        <!-- mzXML file dependencies -->
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>mzxml-parser</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <!-- pkl file dependencies -->
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>pkl-parser</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>dta-parser</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>ms2-parser</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>mgf-parser</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride.tools</groupId>
+            <artifactId>mzdata-parser</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <!-- End of the jmzReader Dependencies -->
+
+        <!-- mascot dat parser from Ugent
+        <dependency>
+            <groupId>com.compomics</groupId>
+            <artifactId>mascotdatfile</artifactId>
+            <version>3.2.1</version>
+            <type>jar</type>
+        </dependency>       -->
+
         <dependency>
             <groupId>psidev.psi.tools</groupId>
             <artifactId>xxindex</artifactId>
@@ -201,7 +238,6 @@
             </plugin>
         </plugins>
     </build>
-
     <repositories>
         <repository>
             <id>ebi-repo</id>
@@ -225,7 +261,14 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-    </repositories>
+         <!-- Compomics Genesis Maven 2 repository -->
+        <repository>
+            <id>genesis-maven2-repository</id>
+            <name>Genesis maven2 repository</name>
+            <url>http://genesis.UGent.be/maven2</url>
+            <layout>default</layout>
+        </repository>
+      </repositories>
 
     <distributionManagement>
        <repository>
