Fixed two bugs with PreMSvsTheMSChartSpectra

--- a/pride-chart/trunk/src/main/resources/database.properties
+++ b/pride-chart/trunk/src/main/resources/database.properties
@@ -2,6 +2,6 @@
 driver=${database.driver}
 protocol=${database.protocol}
 subprotocol=${database.subprotocol}
-alias=${database.dbalias}
-user=${database.user}
-password=${database.password}
+alias=${database.read.dbalias}
+user=${database.write.user}
+password=${database.write.password}
