add build script for farm build

--- a/pride-chart/trunk/pom.xml
+++ b/pride-chart/trunk/pom.xml
@@ -22,6 +22,10 @@
         <url>http://www.ebi.ac.uk</url>
     </organization>
 
+    <properties>
+        <assembly.dir>PRIDE_Chart</assembly.dir>
+    </properties>
+
     <developers>
         <developer>
             <id>fabregat</id>
@@ -189,17 +193,41 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/assembly.xml</descriptor>
-                    </descriptors>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>pride-chart-farm-build</id>
+            <activation>
+                <property>
+                    <name>farm</name>
+                    <value>build</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>${project.basedir}/src/main/assembly/assembly.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 
     <distributionManagement>
