--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -87,13 +87,7 @@
         <dependency>
             <groupId>uk.ac.ebi.jmzidml</groupId>
             <artifactId>jmzidentml</artifactId>
-            <version>1.1.2-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>org.jboss.jsfunit</artifactId>
-                    <groupId>jboss-jsfunit-microdeployer</groupId>
-                </exclusion>
-            </exclusions>
+            <version>1.1.4-SNAPSHOT</version>
         </dependency>
         <!-- Begin of the jmzReader Dependencies. MzML and Pride XML files will be parse
           with jaxb and jmzml directly in order to keep more matadata -->
@@ -283,11 +277,17 @@
       </repositories>
 
     <distributionManagement>
-       <repository>
-          <id>ebi-repo</id>
-                    <name>The EBI internal repository</name>
-                    <url>scp://localhost:2200/homes/maven/public_html/m2repo</url>
-       </repository>
+        <repository>
+            <id>ebi-repo</id>
+            <name>EBI Repository</name>
+            <url>scp://lobster.ebi.ac.uk/homes/maven/public_html/m2repo</url>
+        </repository>
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>ebi-repo-snapshots</id>
+            <name>EBI Snapshots Repository</name>
+            <url>scp://lobster.ebi.ac.uk/homes/maven/public_html/m2repo_snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 
 </project>
