--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -191,11 +191,17 @@
         </dependency>
 
         <!--ProteomeXchange-->
-                <dependency>
-                    <groupId>uk.ac.ebi.pride</groupId>
-                    <artifactId>px-submission-core</artifactId>
-                    <version>0.8-SNAPSHOT</version>
-                </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride</groupId>
+            <artifactId>px-submission-core</artifactId>
+            <version>0.8-SNAPSHOT</version>
+        </dependency>
+        <!-- apache commons httpcomponents-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
