--- a/mzgraph-browser/trunk/pom.xml
+++ b/mzgraph-browser/trunk/pom.xml
@@ -10,6 +10,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.0.13</version>
@@ -22,7 +28,12 @@
         <dependency>
             <groupId>uk.ac.ebi.pride.util</groupId>
             <artifactId>pride-utilities</artifactId>
-            <version>0.1.11</version>
+            <version>0.1.16</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.pride.iongen</groupId>
+            <artifactId>ion-generator</artifactId>
+            <version>0.1-SNAPSHOT</version>
         </dependency>
         <!-- logging dependencies -->
         <dependency>
