--- a/pride-utilities/trunk/pom.xml
+++ b/pride-utilities/trunk/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uk.ac.ebi.pride.util</groupId>
+    <groupId>uk.ac.ebi.pride</groupId>
     <artifactId>pride-utilities</artifactId>
-    <version>0.1.16</version>
+    <version>0.1.17</version>
 
     <dependencies>
         <!-- logging dependencies -->
