--- a/iongen/trunk/pom.xml
+++ b/iongen/trunk/pom.xml
@@ -10,9 +10,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>uk.ac.ebi.pride.util</groupId>
+            <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>pride-utilities</artifactId>
-            <version>0.1.16</version>
+            <version>0.1.17</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
