--- a/mzgraph-browser/trunk/pom.xml
+++ b/mzgraph-browser/trunk/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>uk.ac.ebi.pride.mzgraph</groupId>
     <artifactId>pride-mzgraph-browser</artifactId>
-    <version>1.0.11</version>
+    <version>1.0.12-SNAPSHOT</version>
 
     <dependencies>
         <!-- use ms-data-core-api package to create test set. -->
@@ -32,9 +32,9 @@
             <version>1.0.16</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.pride.iongen</groupId>
+            <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>ion-generator</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- logging dependencies -->
         <dependency>
