--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -105,9 +105,9 @@
             <version>2.0.02</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.pride.util</groupId>
+            <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>pride-utilities</artifactId>
-            <version>0.1.16</version>
+            <version>0.1.17</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride.curation</groupId>
