--- a/iongen/trunk/pom.xml
+++ b/iongen/trunk/pom.xml
@@ -20,6 +20,11 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
 
     <repositories>
