--- a/pride-jaxb/trunk/pride-jaxb-model/pom.xml
+++ b/pride-jaxb/trunk/pride-jaxb-model/pom.xml
@@ -5,7 +5,7 @@
     <groupId>uk.ac.ebi.pride.jaxb</groupId>
     <artifactId>pride-jaxb</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.8</version>
+    <version>1.0.9</version>
     <name>PRIDE JAXB model</name>
     <description>This is the JAXB based API for PRIDE 2</description>
 
@@ -112,7 +112,12 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-xjc</artifactId>
-            <version>2.1.7</version>
+            <version>2.2.4-1</version>
+        </dependency>
+        <dependency> <!-- needed for EscapingXMLStreamWriter to cope with ASCII control characters that are not properly escaped in JAXB -->
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>6.5.1</version>
         </dependency>
     </dependencies>
 
