--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -184,9 +184,9 @@
             <version>3.0.6.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.pride.util</groupId>
+            <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>pride-utilities</artifactId>
-            <version>0.1.16</version>
+            <version>0.1.18</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
