--- a/pride-chart/trunk/pom.xml
+++ b/pride-chart/trunk/pom.xml
@@ -4,7 +4,7 @@
     <groupId>uk.ac.ebi.pride.chart</groupId>
     <artifactId>pride-chart</artifactId>
     <packaging>jar</packaging>
-    <version>0.2.36</version>
+    <version>0.2.37</version>
     <name>pride-chart</name>
     <url>http://maven.apache.org</url>
 
@@ -135,9 +135,9 @@
             <version>1.3</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.pride.util</groupId>
+            <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>pride-utilities</artifactId>
-            <version>0.1.16</version>
+            <version>0.1.18</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
