--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -47,6 +47,10 @@
         </developer>
     </developers>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
