--- a/pride-inspector/branches/development/pom.xml
+++ b/pride-inspector/branches/development/pom.xml
@@ -4,7 +4,7 @@
     <groupId>uk.ac.ebi.pride.gui</groupId>
     <artifactId>pride-inspector</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.6</version>
+    <version>1.2.7</version>
     <name>pride-inspector</name>
     <url>http://code.google.com/p/pride-toolsuite/wiki/PRIDEInspector</url>
 
@@ -139,12 +139,12 @@
         <dependency>
             <groupId>javax.help</groupId>
             <artifactId>javahelp</artifactId>
-            <version>2.0.02</version>
+            <version>2.0.05</version>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.pride.util</groupId>
+            <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>pride-utilities</artifactId>
-            <version>0.1.16</version>
+            <version>0.1.17</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride.curation</groupId>
@@ -182,7 +182,7 @@
         </dependency>
         <dependency>
             <!--Use the following command to add jnlp.jar file to your local maven repository-->
-            <!--mvn install:install-file -Dfile="path\to\jdk\sample\jnlp\servlet\jnlp.jar" -DgroupId=javax.jnlp -DartifactId=jnlp-api -Dversion=1.5.0 =Dpackaging=jar-->
+            <!--mvn install:install-file -Dfile="path\to\jdk\sample\jnlp\servlet\jnlp.jar" -DgroupId=javax.jnlp -DartifactId=jnlp-api -Dversion=1.5.0 -Dpackaging=jar-->
             <groupId>javax.jnlp</groupId>
             <artifactId>jnlp-api</artifactId>
             <version>1.5.0</version>
@@ -231,7 +231,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>px-submission-core</artifactId>
-            <version>0.8-SNAPSHOT</version>
+            <version>1.0.4</version>
         </dependency>
     </dependencies>
 
@@ -339,6 +339,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>webstart-maven-plugin</artifactId>
+                        <version>1.0-beta-3</version>
                         <executions>
                             <execution>
                                 <id>jnlp-building</id>
@@ -365,11 +366,14 @@
                                 <storepass>${keystore.store.password}</storepass>
                                 <keypass>${keystore.key.password}</keypass>
 
+                                <verify>true</verify>
+
                                 <keystoreConfig>
                                     <delete>false</delete>
                                     <gen>false</gen>
                                 </keystoreConfig>
                             </sign>
+
                             <!-- building process -->
                             <pack200>false</pack200>
                             <verbose>true</verbose>
