--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
             <artifactId>ms-data-core-api</artifactId>
-            <version>0.8-SNAPSHOT</version>
+            <version>0.10</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
