--- a/ms-data-core-api/trunk/pom.xml
+++ b/ms-data-core-api/trunk/pom.xml
@@ -55,24 +55,24 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.3.1</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <!-- logging dependencies -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
+            <version>1.7.5</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>0.9.24</version>
+            <version>1.0.11</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>0.9.24</version>
+            <version>1.0.11</version>
         </dependency>
 
         <!-- mzML dependencies -->
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.3</version>
+            <version>1.7</version>
         </dependency>
         <!-- PRIDE XML dependency -->
         <dependency>
@@ -163,12 +163,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.0.5</version>
+            <version>5.1.24</version>
         </dependency>
         <dependency>
-            <groupId>jdom</groupId>
+            <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
-            <version>1.0</version>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride.chart</groupId>
@@ -179,13 +179,13 @@
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.1</version>
+            <version>0.9.1.2</version>
         </dependency>
         <!--spring jdbc template-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>3.0.6.RELEASE</version>
+            <version>3.2.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.pride</groupId>
