update pride-chart project  1. Tuning Average ms/ms plot.

--- a/pride-chart/branches/pride-chart-1.0/pom.xml
+++ b/pride-chart/branches/pride-chart-1.0/pom.xml
@@ -124,7 +124,7 @@
                     <archive>
                         <manifest>
                             <!--export a JSON string -->
-                            <mainClass>uk.ac.ebi.pride.chart.io.PrideJSONWriterRun</mainClass>
+                            <mainClass>uk.ac.ebi.pride.chart.utils.PrideJSONTransformer</mainClass>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib</classpathPrefix>
                         </manifest>
