change inspector packaging with the version number

--- a/pride-inspector/branches/mzidentml/pom.xml
+++ b/pride-inspector/branches/mzidentml/pom.xml
@@ -68,7 +68,7 @@
     </developers>
 
     <properties>
-        <assembly.dir>PRIDE_Inspector</assembly.dir>
+        <assembly.dir>${name}-${version}</assembly.dir>
     </properties>
 
     <dependencies>
